--- a/app/scss/layout/_contact.scss
+++ b/app/scss/layout/_contact.scss
@@ -49,7 +49,7 @@
         margin-bottom: var(--space-2);
 
         >*:not(:last-child){
-            margin-bottom: var(--space-1);
+            margin-bottom: var(--space-1-xx);
         }
     }
 
@@ -57,7 +57,7 @@
     &__email{
         text-align: center;
         >:not(:last-child){
-            margin-bottom: var(--space-1);
+            margin-bottom: var(--space-0-xx);
         }
     }
 
